[tool.poetry]
name = "pydomino"
version = "0.1.0"
description = ""
authors = ["Jongbeom-Kwon <bolk9652@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
anyio = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mkdocs-material = "^8.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
